--- a/UserWebGUI/css/DqmPagesCss/DqmHome.css
+++ b/UserWebGUI/css/DqmPagesCss/DqmHome.css
@@ -21,38 +21,16 @@ body {
   .mainBlockContainer span {
 	display: inline-block;
   }
-  
-  /* Create two unequal columns that sits next to each other */
-  /* Sidebar/left column */
-  .tableContainer {
-	-ms-flex: 20%; /* IE10 */
-	flex: 20%;
-	background-color: white;
-	padding: 0px;
-  }
-  
-  /* Main column */
-  .plotContainer {
-	height: 55%;
-	width: 40%;
-	vertical-align: top;
-	background-color: white;
-	margin-left: 30%;
-	position: fixed;
-  }
 
-  /* PV button */
-  .pvButton {
-	height: 100%;
-	width: 100%;
-	border: none;
-	background-color: transparent;
-	
-  }
-
-  .pvButton:hover {
-	background-color: lightcoral;
-	transition: 0.7s;
+  .subSystemContainer {
+	display: inline-block;
+	border: 2px solid;
+	margin-left: 20px;
+	margin-top: 18px;
+	width: 30%;
+	height: 200px;
+	float: left;
+	text-align: center;
   }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
