--- a/UserWebGUI/css/DCSMonitoringPages/CaloMain.css
+++ b/UserWebGUI/css/DCSMonitoringPages/CaloMain.css
@@ -11,48 +11,40 @@ body {
 	overflow-y: scroll;
 }
 
-/* Column container */
+/* Column containers */
 .mainBlockContainer {
-	display: -ms-flexbox; /* IE10 */
 	display: flex;
-
+	flex-direction: column;
   }
 
   .mainBlockContainer span {
 	display: inline-block;
   }
 
-  .subSystemContainer {
+
+.topBlockContainer {
+	
+  }
+
+.bottomBlockContainer {
+
+  }
+
+.subSystemContainer {
 	display: inline-block;
 	border: 2px solid;
 	margin-left: 20px;
 	margin-top: 18px;
-	width: 30%;
-	height: 200px;
+	width: 40%;
+	height: 400px;
 	float: left;
 	text-align: center;
-  }
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-	.mainBlockContainer {
-	  flex-direction: column;
-	}
-
-	.plotContainer {
-		position: inherit;
-		bottom: 0px;
-	}
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-	.mainBlockContainer {
-		flex-direction: column;
-	  }
-
-	  .plotContainer {
-		position: inherit;
-		bottom: 0px;
-	}
+/*mainFrame*/
+.caloFrame {
+	height: 100%;
+	width: 100%;
+	border: none;
+	min-height: 200px;
 }
