--- a/UserWebGUI/css/DCSMonitoring.css
+++ b/UserWebGUI/css/DCSMonitoring.css
@@ -51,7 +51,7 @@ body {
 /* Fixed sidenav, full height */
 .sidenav {
 	float: left;
-	height: 100%;
+	height: 100vh;
 	width: 200px;
 	/*position: fixed;*/
 	z-index: 1;
